Added recommendation and stream service