@@ -1,6 +1,9 @@
 package com.akempwad.recommendation.controller;
 
 import com.akempwad.recommendation.dto.MovieRecommendations;
+import com.akempwad.recommendation.entity.Movie;
+import com.akempwad.recommendation.service.RecommendationService;
+import com.akempwad.recommendation.service.RecommendationStreamService;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
 import reactor.core.publisher.Flux;
@@ -12,14 +15,26 @@ import java.util.List;
 @RequestMapping("/api/recommendations")
 public class RecommendationController {
 
+    private final RecommendationService recommendationService;
+    private final RecommendationStreamService recommendationStreamService;
+
+    public RecommendationController(RecommendationService recommendationService, RecommendationStreamService recommendationStreamService) {
+        this.recommendationService = recommendationService;
+        this.recommendationStreamService = recommendationStreamService;
+    }
+
     @GetMapping("/{customerId}")
     public List<MovieRecommendations> getRecommendations(@PathVariable Integer customerId){
-        return Collections.emptyList();
+        return List.of(
+                MovieRecommendations.newlyAdded(this.recommendationService.findNewlyAdded()),
+                MovieRecommendations.personalized(customerId, this.recommendationService.findPersonalized(customerId))
+        );
     }
 
     @GetMapping(value = "/{customerId}/stream", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
     public Flux<MovieRecommendations> getRecommendationStream(@PathVariable Integer customerId){
-        return Flux.empty();
+
+        return this.recommendationStreamService.streamRecommendations(customerId);
     }
 
 }
